--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/socket.io": "^2.1.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "socket.io": "^2.2.0",
     "typescript": "^3.2.2"
   }
 }
